<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relWB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/museum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/museum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/museum"
            android:text="@string/WSB"
            android:textColor="#8240DF"
            android:textSize="40sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relBR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relWB"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <ImageButton
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="enterBranch"
            android:layout_height="100dp"
            android:background="@drawable/branch_d" />

        <ImageView
            android:id="@+id/branchI"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/klych" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/branchI"
            android:text="@string/branch"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relBR"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp">

        <ImageButton
            android:id="@+id/KURSIB"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/branch_d" />

        <ImageView
            android:id="@+id/dollarI"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/dollar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/dollarI"
            android:text="@string/kurs"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:id="@+id/TDate"
            android:layout_marginRight="15dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dollarI"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/usd"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dollarI"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/usd"
            android:text=""
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/KURSIB"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@+id/kurseur"
            android:text="@string/eur"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/kurseur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/KURSIB"
            android:layout_alignBottom="@+id/KURSIB"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relK"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/btn_enter"
            android:text="@string/enter"
            android:onClick="enter"
            android:clickable="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>